manifests/workloads/blog-barnes-biz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog-barnes-biz
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
